--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 
 /* header */
 .header-section{
-    padding-top: 20px;
+    padding: 30px 0 50px 0;
     background-color: #F0FFF0;
-    padding: 100px;
 }
 .logo img{
     max-width: 100%;
